--- a/products.css
+++ b/products.css
@@ -17,13 +17,14 @@ a {
 }
 
 #header {
+  width: 100%;
   position: fixed;
   top: 0;
   background-color: white;
   z-index: 1;
 }
 
-.header__annouce {
+.wrap--header__annouce {
   margin: 0;
   width: 100%;
   height: 30px;
@@ -37,10 +38,13 @@ a {
   font-size: 14px;
 }
 
-.header__header {
+.wrap--header__header{
+  display: table-cell;
+  width: 100%;
+}
+.header-flex {
   display: flex;
   margin: 10px 200px;
-  /* flex-direction: row; */
   justify-content: space-around;
   align-items: center;
 }
@@ -67,6 +71,7 @@ a {
   color: black;
 }
 
+
 #nav > li {
   list-style: none;
   font-size: 14px;
@@ -77,8 +82,24 @@ a {
   position: relative;
 }
 
+.navbar{
+  display: none;
+  width: 24px;
+}
+
+.static-screen{
+  display: none;
+  position: fixed;
+  right: 0;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+}
+
 .cart {
-  width: 20px;
+  width: 24px;
   position: relative;
   cursor: pointer;
 }
@@ -124,17 +145,36 @@ a {
 }
 
 #container {
-  margin: 100px 200px;
+  margin: 0 200px;
+}
+
+.img--wrapper{
+  display: flex; 
+  padding: 0 100px; 
+  justify-content: center;
 }
 
 .grid-container {
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-gap: 30px;
+  max-width: 1100px;
 }
 
 .grid-container > div {
   text-align: center;
+}
+
+.item2{
+  margin-top: 150px; 
+  padding-left: 30px
+}
+.item3{
+  margin-top: 150px; 
+  padding-right: 30px;
+}
+.item6{
+  margin-top: 70px; 
+  padding-left: 30px;
 }
 
 p,
@@ -187,6 +227,10 @@ span {
   top: 50%;
   transform: translateY(-48%);
   border-radius: 5px;
+}
+
+.slideshow-container{
+  width: 50%;
 }
 
 .detail-product {
@@ -322,6 +366,22 @@ span {
   justify-content: space-between;
 }
 
+.layout-reviews__left{
+  display: flex;
+}
+
+.reviews{
+  padding: 48px 15px;
+}
+
+.reviews-text{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 30px;
+}
+
+
 .toggle {
   display: flex;
   padding: 12px 0;
@@ -346,9 +406,12 @@ span {
 }
 
 .grid-recommend {
-  display: grid;
-  grid-template-columns: auto auto auto auto;
-  gap: 20px;
+  width: 100%;
+  display: flex;
+}
+
+.wrapper-item-recommend{
+  width: 25%;
   padding: 10px;
 }
 
@@ -447,6 +510,12 @@ textarea {
   color: #fff;
   cursor: pointer;
   border-radius: 5px;
+}
+.cancel{
+  margin-left: 3px;
+  background-color: #ffffff; 
+  color: #000000; 
+  border: 1px solid #000000;
 }
 
 .btn-rev:hover {
@@ -578,16 +647,36 @@ button.next {
 }
 
 #yourCart{
-    position: absolute;
-    display: none;
+    /* position: absolute; */
+    /* display: none; */
     width: 450px;
     height: 100vh;
     position: fixed;
     background-color: #fff;
     color: black;
-    z-index: 999;
+    z-index: 9999;
     right: 0;
     top: 0;
+    bottom: 0;
+    transform: translateX(100%);
+    transition: transform linear 0.2s;
+}
+
+.btn-close{
+  color: #666;
+  position: absolute;
+  top: 1 rem;
+  right: 1rem;
+  width: 18px;
+  height: 18px;
+}
+
+.cart-open:checked ~ .static-screen{
+  display: block;
+}
+
+.cart-open:checked ~ #yourCart{
+  transform: translateX(0%);
 }
 
 .cart-text{
@@ -609,7 +698,6 @@ button.next {
 
 .cart-close{
     display: flex;
-    justify-content: space-between;
 }
 
 .cart-header{
@@ -731,3 +819,309 @@ button.next {
     height: 35px !important;
 
 }
+
+.menu-mobile{
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 350px;
+  /* height: 100vh; */
+  z-index: 9999;
+  background-color: #fff;
+  transform: translateX(-100%);
+  transition: transform linear 0.2s;
+}
+
+.text{
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+}
+
+.menu-container>ul>li{
+  list-style: none;
+  padding: 15px 0;
+}
+
+.btn-close-menu{
+  color: #666;
+  position: absolute;
+  top: 1.4rem;
+  right: 1.6rem;
+  width: 18px;
+  height: 18px;
+}
+
+.overlay{
+  display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: linear-gradient(180deg, rgba(248,248,248,0.3) 0%, rgba(217,217,217,0.3) 100%);
+  backdrop-filter: blur(15px);
+  z-index: 999;
+  opacity: 1;
+  visibility: visible;
+  transition: ease 0.25s;
+}
+
+.menu-open:checked ~ .overlay{
+  display: block;
+}
+
+.menu-open:checked ~ .menu-mobile{
+  transform: translateX(0%);
+}
+
+.input-group-btn{
+  width: 10%;
+  margin-left: 40px;
+}
+
+.footer__right--item{
+  color: #ffffff;
+  width: 33.3%;
+  padding-left: 30px;
+}
+
+.under-footer{
+  display: flex; 
+  justify-content:space-between; 
+  align-items: center; 
+  opacity: .7;
+}
+
+.payment-icons{
+  list-style: none; 
+  display: inline-table; 
+  margin-top: 7px;
+  text-align: right;
+}
+
+.under-footer li {
+  display: inline-table;
+}
+
+.footer__right{
+  display: flex;
+  width: 60%;
+  justify-content: flex-end;
+}
+
+.footer__left{
+  width: 40%;
+}
+
+.site-footer{
+  padding: 30px;
+}
+
+.social-icons-footer{
+  display: flex; 
+  list-style: none; 
+  justify-content: flex-end; 
+  font-size: 25px; 
+  align-items: center;
+}
+
+.site-footer__wrap{
+  width: 50%;
+  text-align: center;
+}
+
+.nav-info,
+.nav-menu{
+  list-style: none;
+}
+
+/* RWD */
+
+/* Mobile & Tablet: width < 1024px */
+@media only screen and (max-width:  63.9375em){
+  .navbar{
+    display: block;
+  }
+
+  .header__header--right{
+    display: none;
+  }
+
+  .wrap--header__header{
+    margin: 0 40px;
+    justify-content: space-between;
+  }
+
+  .header__header--left, .header--right--mobile{
+    width: 50%;
+  }
+
+  .header__header--left img {
+    width: 35%;
+  }
+
+  .header--right--mobile{
+    justify-content: flex-end;
+  }
+
+  .header-flex {
+    margin: 0;
+    padding: 0 30px;
+  }
+
+  .grid-container{
+    padding: 0 20px;
+  }
+
+  .item2,.item3,.item6{
+    margin-top: 30px;
+    padding: 0;
+  }
+
+  .grid-recommend{
+    display: grid;
+    grid-template-columns: 33.3% 33.3% 33.3%;
+  }
+  .wrapper-item-recommend{
+    width: 100%;
+  }
+
+  .input-group-btn{
+    margin: 0;
+  }
+
+}
+
+/* Mobile: width < 740px */
+/* 46.1875em = 739px */
+@media only screen and (max-width: 46.1875em) {
+  #container{
+    margin: 0;
+  }
+
+  .img--wrapper{
+    padding: 0 15px 10px;
+  }
+
+  .imgVogue{
+    width: 100%;
+  }
+
+  .grid-container{
+    display: block;
+  }
+
+  .grid-product {
+    display: block;
+    height: auto;
+  }
+
+  .slideshow-container{
+    width: 100%;
+  }
+
+  .thumbnails .thumbnail-item {
+    width: 63px;
+  }
+
+  .detail-product {
+    width: 100%;
+    padding: 10px 0;
+  }
+
+  .layout-reviews__left{
+    display: block;
+  }
+
+  .reviews-text{
+    padding: 20px 0;
+  }
+
+  .btn-rev{
+    width: 100%;
+  }
+  .cancel{
+    margin: 10px 0;
+  }
+
+  .grid-recommend{
+    display: grid;
+    grid-template-columns: 50% 50%;
+  }
+
+  .content-footer{
+    flex-direction: column-reverse;
+  }
+  
+  .footer__right{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  
+  .footer__right--item {
+    width: 100%;
+    padding: 0;
+  }
+  
+  .footer__right-title {
+    border-bottom: 1px solid #fff;
+  }
+
+  .footer__left{
+    width: 100%;
+  }
+
+  .site-footer{
+    padding: 50px 0;
+  }
+
+  .footer__logo{
+    margin-top: 10px;
+  }
+  
+  .under-footer {
+    flex-direction: column;
+  }
+
+  .nav-info,
+  .nav-menu{
+    display: none;
+  }
+
+  .social-icons-footer{
+    justify-content: center;
+  }
+
+  .site-footer__wrap{
+    width: 100%;
+    text-align: start;
+  }
+
+  .site-footer__linklist{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .under-icon{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 15px 0;
+  }
+}
+
+/* Tablet: width >= 740px and width < 1024px */
+/* 46.25em = 740px and 63.9375em = 1023px */
+@media only screen and (min-width: 46.25em) and (max-width: 63.9375em) {
+ 
+
+  #container{
+    margin: 0 ;
+    padding: 0;
+  }
+
+
+}
+
