--- a/products.css
+++ b/products.css
@@ -429,6 +429,13 @@ span {
   padding: 10px;
 }
 
+.header-recommend{
+  padding-left: 15px; 
+  font-size: 28px; 
+  font-weight: 300; 
+  font-family: 'Poppins', 'sans-serif';
+}
+
 .wrap-img {
   position: relative;
 }
@@ -665,7 +672,7 @@ button.next {
 #yourCart{
     /* position: absolute; */
     /* display: none; */
-    width: 450px;
+    /* width: 450px; */
     height: 100vh;
     position: fixed;
     background-color: #fff;
@@ -958,6 +965,50 @@ button.next {
   padding: 0 100px;
 }
 
+.site-width{
+  max-width: 1120px;
+  margin: 0 auto;
+  padding-left: 15px; 
+  padding-right: 15px
+}
+
+.check-out{
+  width: 100%; 
+  position: absolute;
+  background-color: #fff;
+  z-index: 1; 
+  right: 0; 
+  bottom: 0;
+  transform: translateY(100%);
+  transition: transform linear 0.3s;
+}
+
+#sub-cart:checked ~ .check-out{
+  transform: translateY(0);
+  transition: transform linear 0.3s;
+}
+
+.sub-cart-overlay{
+  display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+.header-faq{
+  margin-bottom: 20px; 
+  font-size: 28px; 
+  font-weight: 400;
+}
+
+#sub-cart:checked ~ .sub-cart-overlay{
+  display: block;
+}
+
 /* RWD */
 
 /* Mobile & Tablet: width < 1024px */
@@ -1010,19 +1061,17 @@ button.next {
     width: 100%;
   }
 
-  .input-group-btn{
-    margin: 0;
-  }
-
   button.prev, 
   button.next {
     top: 35%;
   }
 
+  /* .header-faq,
+  .header-recommend,
   .productItem__title,
   .text-center {
-    font-size: 22px;
-  }
+    font-size: 24px;
+  } */
 
   /* .cart-productItem{
     font-size: 13px;
@@ -1174,6 +1223,17 @@ button.next {
     display: block;
     transition: all linear 0.5s;
   }
+
+  .site-width{
+    max-width: 100%;
+  }
+
+  .header-faq,
+  .header-recommend,
+  .productItem__title,
+  .text-center {
+    font-size: 22px;
+  }
   
 }
 
@@ -1186,4 +1246,36 @@ button.next {
     padding: 0;
   }
 
+  .input-group-btn{
+    margin: 0;
+  }
+
+  .header-faq,
+  .header-recommend,
+  .productItem__title,
+  .text-center {
+    font-size: 24px;
+  }
+}
+
+@media only screen and (min-width: 1023px) and (max-width: 1110px){
+  
+  .header-flex {
+    margin: 10px 100px;
+  }
+  
+  #container{
+    margin: 115px 100px;
+  }
+
+  .item2,.item3,.item6{
+    margin-top: 50px;
+  }
+
+  .header-faq,
+  .header-recommend,
+  .productItem__title,
+  .text-center {
+    font-size: 24px;
+  }
 }
